--- a/sale.jrxml
+++ b/sale.jrxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 5.5.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sale" language="i18ngroovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="797f10e7-0b3e-4c35-9d66-a649d6b4a5ef">
 	<property name="ireport.zoom" value="1.4641000000000013"/>
 	<property name="ireport.x" value="0"/>
@@ -408,7 +409,7 @@
 				</textField>
 				<textField>
 					<reportElement x="390" y="11" width="67" height="12" uuid="ac3c9321-b48f-4c26-893d-8c7fc890dc9f">
-						<printWhenExpression><![CDATA[$F{sale_discount-sale_discount} != 0]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$F{sale_discount-sale_discount} != null & $F{sale_discount-sale_discount} != 0]]></printWhenExpression>
 					</reportElement>
 					<textElement>
 						<font size="9"/>
@@ -417,7 +418,7 @@
 				</textField>
 				<textField>
 					<reportElement x="462" y="11" width="76" height="12" uuid="73c81d0c-230b-4642-83a9-68aeade2aa3a">
-						<printWhenExpression><![CDATA[$F{sale_discount-sale_discount} != 0]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$F{sale_discount-sale_discount} != null & $F{sale_discount-sale_discount} != 0]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
 						<font size="9"/>
